# fyipedia-mcp

./: README.md  demo.tape  pyproject.toml
skills/fyipedia-mcp/: SKILL.md
src/fyipedia_mcp/: __init__.py  server.py
tests/: test_server.py
