[project]
name = "fyipedia-mcp"
version = "0.1.0"
description = "Unified MCP server for FYIPedia tools — 30+ tools from 10 packages in one server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "fyipedia",
    "mcp",
    "model-context-protocol",
    "ai-tools",
    "color",
    "emoji",
    "unicode",
    "distance",
    "timezone",
    "unit-conversion",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
# Phase 2 packages (published on PyPI)
color = ["colorfyi[mcp]>=0.1"]
emoji = ["emojifyi[mcp]>=0.1"]
symbol = ["symbolfyi[mcp]>=0.1"]
unicode = ["unicodefyi[mcp]>=0.1"]
font = ["fontfyi[mcp]>=0.1"]
# Wave 2 — uncomment after PyPI publish:
# distance = ["distancefyi[mcp]>=0.1"]
# time = ["timefyi[mcp]>=0.1"]
# name = ["namefyi[mcp]>=0.1"]
# unit = ["unitfyi[mcp]>=0.1"]
# holiday = ["holidayfyi[mcp]>=0.1"]
all = [
    "fyipedia-mcp[color,emoji,symbol,unicode,font]",
]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.0",
]

[project.entry-points."mcp.servers"]
fyipedia = "fyipedia_mcp.server:mcp"

[project.urls]
Homepage = "https://fyipedia.com"
Repository = "https://github.com/fyipedia/fyipedia-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
